Added transaction CRUD functionality
